This commit inlcudes numerous changes to the build file and source files for DrJava incorporating the JShell from Java 9+.  The backward compatiblity of Java 9+ with Java 8 is flawed so some features (notably searching for all occurrences of a string) no longer work.  Language levels support is completely broken; the converter falls over when it is executed with Java 9 or later (even in our Java 8 version of DrJava).
Changes to be committed:
	modified:   build.xml
	deleted:    build_old.xml
	new file:   extlib/cldrdata.jar
	new file:   extlib/dnsns.jar
	new file:   extlib/icedtea-sound.jar
	new file:   extlib/jaccess.jar
	new file:   extlib/libatk-wrapper.so
	new file:   extlib/localedata.jar
	new file:   extlib/nashorn.jar
	new file:   extlib/rt.jar
	new file:   extlib/sunec.jar
	new file:   extlib/sunjce_provider.jar
	new file:   extlib/sunpkcs11.jar
	new file:   extlib/tools.jar
	new file:   extlib/zipfs.jar
	modified:   src/edu/rice/cs/drjava/RemoteControlServer.java
	modified:   src/edu/rice/cs/drjava/Version.orig
	modified:   src/edu/rice/cs/drjava/config/ConfigOptionListeners.java
	modified:   src/edu/rice/cs/drjava/config/DrJavaPropertySetup.java
	modified:   src/edu/rice/cs/drjava/config/DrJavaPropertySetupTest.java
	modified:   src/edu/rice/cs/drjava/config/KeyStrokeOption.java
	modified:   src/edu/rice/cs/drjava/config/KeyStrokeOptionTest.java
	modified:   src/edu/rice/cs/drjava/config/LongOptionTest.java
	modified:   src/edu/rice/cs/drjava/config/Option.java
	modified:   src/edu/rice/cs/drjava/config/OptionConstants.java
	modified:   src/edu/rice/cs/drjava/config/UnaryOpProperty.java
	modified:   src/edu/rice/cs/drjava/model/JarJDKToolsLibrary.java
	modified:   src/edu/rice/cs/drjava/model/compiler/Javac160FilteringCompiler.java
	modified:   src/edu/rice/cs/drjava/model/compiler/JavacCompiler.java
	modified:   src/edu/rice/cs/drjava/model/compiler/JavaxToolsCompiler.java
	modified:   src/edu/rice/cs/drjava/model/compiler/LanguageLevelStackTraceMapper.jav